Fix nav bar overlap and homepage header

--- a/common.css
+++ b/common.css
@@ -23,7 +23,7 @@ body {
   background-color: var(--accent-dark-color);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 5;
 }
 
 #navbar :first-child {
