--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body::before {
   content: "";
-  position: absolute;
+  position: fixed;
   top: 6rem; 
   left: 0;
   right: 0;  
@@ -40,4 +40,8 @@ a.button {
   text-shadow: 8px 8px 6px;
   transform: scale(1.1);
   font-weight: bold;
+}
+
+.title {
+  color: var(--accent-color);
 }
